# contourrs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  FEATURES.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  docs-preview.yml  docs.yml  integration-notebooks.yml  publish.yml  release.yml
crates/contourrs/: Cargo.toml
crates/contourrs-core/: Cargo.toml
crates/contourrs-core/src/: arrow.rs  connectivity.rs  contour.rs  geometry.rs  label.rs  lib.rs  polygon.rs  raster.rs  trace.rs  transform.rs  union_find.rs
crates/contourrs-core/src/cuda/: kernel.rs  mod.rs
crates/contourrs-python/: Cargo.toml
crates/contourrs-python/src/: lib.rs
crates/contourrs/src/: arrow.rs  contour.rs  contour_blocked.rs  geometry.rs  label.rs  lib.rs  polygon.rs  raster.rs  trace.rs  transform.rs  union_find.rs
crates/contourrs/src/cuda/: kernel.rs  mod.rs
docs/: api.md  architecture.md  examples.md  getting-started.md  index.md  limitations.md  performance.md
docs/plans/: 2026-03-07-topology-first-contours-design.md
examples/: cdl_tiled_polygonize.ipynb  cdl_tiled_polygonize.py  dem_contour.ipynb  dem_contour.py  quickstart.ipynb  torchgeo_ftw_polygonize.ipynb
examples/data/: README.md  cdl_2023_19153.tif  cdl_2023_polk_512.tif
examples/examples/output/: ftw_fields_idx50.parquet
python/contourrs/: __init__.py  _contourrs.pyi
scripts/: benchmark.py  benchmark_torch_gpu.py  build_tutorials.sh  generate_readme_plots.py
tests/: compare_rasterio.py  test_compare_rasterio.py  test_unit.py
