[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "contourrs"
version = "0.1.0"
description = "Fast raster polygonization with Arrow export — pure Rust, zero GDAL"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = ["numpy", "pyarrow"]

[project.optional-dependencies]
test = ["rasterio", "shapely", "pytest"]
dev = ["rasterio", "shapely", "pytest", "maturin", "pre-commit", "ruff", "ty", "nbconvert", "ipykernel"]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/contourrs-python/Cargo.toml"
python-source = "python"
module-name = "contourrs._contourrs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
