[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "contourrs"
version = "0.4.0"
description = "Fast raster polygonization with Arrow export — pure Rust, zero GDAL"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = ["numpy", "pyarrow"]

[project.optional-dependencies]
test = ["rasterio", "shapely", "pytest"]
dev = ["rasterio", "shapely", "pytest", "maturin", "pre-commit", "ruff", "ty", "nbconvert", "ipykernel", "matplotlib", "geopandas"]
cuda = ["torch>=2.4"]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/contourrs-python/Cargo.toml"
python-source = "python"
module-name = "contourrs._contourrs"

[tool.pytest.ini_options]
markers = ["integration: requires rasterio + shapely"]
addopts = "-m 'not integration' --ignore=tests/test_compare_rasterio.py"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle — too noisy for small project
    "ANN",     # type annotations — covered by ty
    "ERA",     # commented-out code
    "T20",     # print statements (used in notebooks/tests)
    "S101",    # assert in tests
    "INP001",  # implicit namespace packages
    "PTH",     # pathlib preference — not always cleaner
    "FBT",     # boolean positional args
    "PLR0913", # too many arguments
    "COM812",  # trailing comma (conflicts with formatter)
    "ISC001",  # implicit string concat (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "PT018", "BLE001", "PLR1722", "PLC0415"]
"examples/*" = ["T20", "E402", "F811", "PLR2004", "ICN001", "PLC0415"]
"scripts/*" = ["T20", "ICN001", "E402", "PLC0415"]
"*.pyi" = ["PYI021", "PYI048", "PYI044", "PYI002", "PIE790", "UP045", "ICN001"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
