[package]
name = "contourrs-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "_contourrs"
crate-type = ["cdylib"]

[dependencies]
contourrs = { path = "../contourrs", features = ["arrow"] }
arrow = { version = "54", default-features = false, features = ["ffi"] }
geo-types = "0.7"
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
